# Arty

./: .gitignore  .gitmodules  BUGS.txt  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  README.md  TODO  arty.py
.github/workflows/: make.yml
arty/: .gitignore  Cargo.toml  arty.py  cmd.py  engine.py  features.py  memory.py  parser.py  string_matching.py
arty/src/: lib.rs  main.rs
arty/src/core/: guesser.rs  mod.rs  terminal.rs  user_history.rs
arty/src/feature/: guesser.rs  interpreter.rs  mod.rs  shell.rs  shell_controller.rs  user_history_guesser.rs
arty/src/filesystem/: mod.rs
arty/src/guesser/: mod.rs
arty/src/language/: ctrlop.rs  helper.rs  interface.rs  lexer.rs  math.rs  mod.rs  name.rs  parser.rs  token.rs
arty/src/lexer/: ctrlop.rs  error.rs  helper.rs  identifier.rs  interface.rs  math.rs  mathop.rs  mod.rs  name.rs  number.rs
arty/src/parser/: mod.rs
artyminal/: .gitignore  Cargo.toml
artyminal/src/: lib.rs  main.rs
artyminal/src/core/: guesser.rs  terminal.rs  user_history.rs
artyminal/src/feature/: guesser.rs  shell.rs  user_history_guesser.rs
artyminal/src/filesystem/: mod.rs
artyminal/src/language/: helper.rs  interface.rs  lexer.rs  mod.rs  name.rs  parser.rs  token.rs
benchmarks/: CMakeLists.txt  aabb_cluster.cpp
bot_arena/: bot_arena  bot_arena.cpp  bot_arena.trace
bot_editor/: main.cpp
dataset/: cmd.txt  keywords.txt
include/arty/core/: blackboard.h  blackboard.h.autosave  blackboard.hpp  command.h  dynamic_matrix.hpp  ecs.h  entity.h  geometry.hpp  input.hpp  machine_learning.hpp  math.h  math.hpp  memory.hpp  mesh.hpp  number.h  number.hpp  property.h  renderer.hpp  result.h  result.hpp  system.hpp  token.h  window.h  window.hpp
include/arty/core/details/: geometry_impl.hpp
include/arty/core/gui/: rectangle.hpp  text.hpp
include/arty/ext/: OpenGlWindow.h  gl_loader.h  opengl_renderer.h  opengl_window.h
include/arty/ext/freetype-gl/: freetype_gl_text_renderer.hpp
include/arty/ext/glfw/: glfw_window.hpp
include/arty/ext/opengl/: 2d_renderer.hpp  gl_loader.hpp  gl_renderer.hpp  gl_shape_renderer.hpp  opengl_renderer.h  opengl_renderer.hpp  opengl_window.h
include/arty/ext/sfml/: sfml_window.hpp
include/arty/impl/: camera_system.hpp  collision.hpp  collision_rendering_system.hpp  collision_solver_system.hpp  collision_system.hpp  debug_hid_system.hpp  engine.h  engine.hpp  hitbox_rendering_system.hpp  learning.h  lexer.h  matrix.h  mesh_loader_system.hpp  mouse_system.hpp  parser.h  physics.hpp  physics_system.hpp  player_control.hpp  position_system.h
include/arty/impl/gui/: gui_system.hpp
include/arty/math/core/: number.h
misc05_picking/: misc05_picking_BulletPhysics  misc05_picking_custom  misc05_picking_slow_easy
models/: test_pyramid.mtl
models/uv_test/: tower.blend  tower.mtl
playground/: main.cpp  playground  tile_systems.cpp  tile_systems.hpp
shaders/: SingleColor.fragmentshader  SingleColorWithLight.fragmentshader
src/: lexer.h
src/arty/core/: dynamic_matrix.cpp  ecs.cpp  input.cpp  machine_learning.cpp  memory.cpp  number.cpp  number_impl.h  result.cpp  system.cpp  token.cpp  window.cpp
src/arty/ext/: gl_loader.cpp  opengl_renderer.cpp  opengl_window.cpp
src/arty/ext/glfw/: glfw_window.cpp
src/arty/ext/opengl/: 2d_renderer.cpp  gl_loader.cpp  gl_renderer.cpp  gl_shape_renderer.cpp  opengl_renderer.cpp  opengl_window.cpp
src/arty/ext/sfml/: sfml_window.cpp
src/arty/impl/: camera_system.cpp  collision.cpp  collision_rendering_system.cpp  collision_solver_system.cpp  collision_system.cpp  debug_hid_system.cpp  engine.cpp  hitbox_rendering_system.cpp  learning.cpp  lexer.cpp  matrix.cpp  mesh_loader_system.cpp  mouse_system.cpp  parser.cpp  physics.cpp  physics_system.cpp  player_control.cpp  player_control.cpp.autosave
src/arty/impl/gui/: gui_system.cpp
src/arty/math/core/: number.cpp  number_impl.h
test/: CMakeLists.txt  blackboard_test.cpp  camera_test.cpp  collision_test.cpp  dynamic_matrix_test.cpp  ecs_test.cpp  geometry_test.cpp  integer_test.cpp  machine_learning_test.cpp  math_test.cpp  matrix_test.cpp  memory_test.cpp  number_test.cpp  perceptron_test.cpp  physics_test.cpp  test_mat.cpp  whole_test.cpp
tutorial02_red_triangle/: tutorial02_red_triangle
tutorial03_matrices/: tutorial03_matrices
tutorial04_colored_cube/: tutorial04_colored_cube
tutorial05_textured_cube/: tutorial05_textured_cube
tutorial06_keyboard_and_mouse/: tutorial06_keyboard_and_mouse
tutorial07_model_loading/: tutorial07_model_loading
tutorial08_basic_shading/: tutorial08_basic_shading
tutorial09_vbo_indexing/: tutorial09_several_objects  tutorial09_vbo_indexing
tutorial10_transparency/: tutorial10_transparency
tutorial11_2d_fonts/: tutorial11_2d_fonts
tutorial12_extensions/: tutorial12_extensions
tutorial13_normal_mapping/: tutorial13_normal_mapping
tutorial14_render_to_texture/: tutorial14_render_to_texture
tutorial15_lightmaps/: tutorial15_lightmaps
tutorial16_shadowmaps/: tutorial16_shadowmaps  tutorial16_shadowmaps_simple
tutorial17_rotations/: tutorial17_rotations
tutorial18_billboards_and_particles/: tutorial18_billboards  tutorial18_particles
tutorials/tutorial10_transparency/: tutorial10_transparency
tutorials/tutorial11_2d_fonts/: tutorial11_2d_fonts
tutorials/tutorial12_extensions/: tutorial12_extensions
tutorials/tutorial15_lightmaps/: tutorial15_lightmaps
tutorials/tutorial16_shadowmaps/: tutorial16_shadowmaps
tutorials/tutorial18_billboards_and_particles/: tutorial18_particles
yaide/: CMakeLists.txt  main.cpp
